# BacktestVisualizer

./: .env  README.md  app.py  backtest_trades.csv  deploy.sh  deploy_containerapp.sh  pyproject.toml  test_bot.py
backend/: bot_logic.py  dockerfile  main.py  models.py
bots/: dip_buy_bot.py
